finished desktop version

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -64,3 +64,73 @@ nav img{
   display: flex;
   justify-content: flex-end;
 }
+.info{
+  display: flex;
+  align-items: flex-start;
+  margin-top: -2rem;
+  margin-bottom: 3rem;
+
+
+}
+.services{
+  display: flex;
+  justify-content: center;
+
+}
+
+.service{
+  display: flex;
+  flex-direction: column;
+  width: 5rem;
+  text-align: center;
+  align-items: center;
+  margin: 3rem;
+  height: 8rem;
+  justify-content: space-between;
+}
+
+
+.infopoint{
+  width: 35%;
+  margin: 5%;
+
+
+}
+.infotitle span {
+  background-color: cadetblue;
+  padding: .5rem 3.5rem .5rem 1.25rem;
+  max-width: 10rem;
+  color: white;
+  font-weight: bold;
+
+}
+.infotext {
+  padding-top: 1rem;
+}
+.infotitle{
+  margin-bottom: 1rem;
+}
+.paper img{
+  width: 3.5rem;
+}
+.ruler img{
+  width: 5rem;
+}
+.truck img{
+  width: 5rem;
+}
+footer {
+  display: flex;
+  align-items: center;
+  background-color: azure;
+  padding: 4rem;
+
+}
+footer img{
+  height: 1.5rem;
+  margin-right: 1rem;
+}
+footer div{
+  display: flex;
+  align-items: center;
+}
