--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,6 +18,9 @@ header{
   height: 31rem;
   padding-top: 1rem;
 }
+.smallnav li{
+  display: none;
+}
 
 nav{
   background-color: cadetblue;
@@ -47,6 +50,9 @@ nav img{
   max-width: 960px;
   margin: auto;
 }
+.flex{
+    display: flex;
+}
 .headline{
   background-color: white;
   display: inline-block;
@@ -60,8 +66,8 @@ nav img{
 .headline h1{
   margin: .67rem 0;
 }
-.flex{
-  display: flex;
+header .flex{
+
   justify-content: flex-end;
 }
 .info{
@@ -84,7 +90,7 @@ nav img{
   width: 5rem;
   text-align: center;
   align-items: center;
-  margin: 3rem;
+  margin: 1.5rem;
   height: 8rem;
   justify-content: space-between;
 }
@@ -134,3 +140,73 @@ footer div{
   display: flex;
   align-items: center;
 }
+
+
+
+
+
+/* Tablet Rules */
+
+@media only screen and (max-width: 1024px){
+  header{
+    height: 22rem;
+    padding: 0;
+
+  }
+  nav.container{
+    max-width: 100%;
+  }
+  .headline{
+    padding: 0.75rem 4rem;
+    margin-top: 5rem;
+    margin-right: 2rem;
+    font-size: 1.33rem;
+   }
+}
+
+
+@media only screen and (max-width: 500px){
+
+  header{
+    height: 17rem;
+  }
+  .menu ul li {
+    display: none;
+  }
+   ul .minimenu li{
+    display: block;
+  }
+
+  .headline {
+    width: 100%;
+    padding: 0rem 1rem;
+    margin: 9rem auto 0 auto;
+    text-align: center;
+  }
+  .headline h1 {
+    margin: 0;
+  }
+
+
+  .services, .info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 3.77rem;
+    width: 100%;
+  }
+
+
+   .infotitle span{
+    width: 100%;
+    max-width: none;
+    margin-right: 0;
+    text-align: center;
+
+  }
+  footer{
+    display: flex;
+    justify-content: center;
+  }
+
+  }
